Part1/ex1.09/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-server-html-pong-svc
spec:
  type: ClusterIP
  selector:
    app: express-server-html-pong
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
